--- a/test/fixtures/stores.yml
+++ b/test/fixtures/stores.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  address: MyString
-  city: MyString
-  brand: MyString
-  owner_id: 1
+chatime_toronto:
+  name: Chatime
+  address: 132 Dundas St W
+  city: Toronto
+  brand: Chatime
+  owner: john
 
-two:
-  name: MyString
-  address: MyString
-  city: MyString
-  brand: MyString
-  owner_id: 1
+the_alley_ottawa:
+  name: The Alley
+  address: 123 Test Street
+  city: Ottawa
+  brand: The Alley
+  owner: jane
